Tailwind classes working as expected

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,12 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Projects">
 	<main class="text-white">
-		<h2>Projects</h2>
+		<h1 class="text-2xl">Projects</h1>
+		<div class="flex">
+			<div class="p-2">Ecommerce</div>
+			<div class="p-2">AI tool</div>
+			<div class="p-2">Data analytics</div>
+		</div>
 	</main>
 </Layout>
 
