--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Projects">
+<Layout title="My projects">
 	<main class="text-white">
 		<h1 class="text-2xl">Projects</h1>
 		<div class="flex">
