Layout navbar items structured

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,19 +17,25 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<nav class="text-white">
-			<h2>Logo</h2>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Projects</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
+		<nav class="flex justify-between text-white">
+			<img src="/favicon.svg" class="w-10 mx-5 my-auto" />
+			<section class="flex">
+				<ul class="flex">
+					<li class="p-2 m-3"><a href="/">Home</a></li>
+					<li class="p-2 m-3"><a href="#">About</a></li>
+					<li class="p-2 m-3"><a href="#">Projects</a></li>
+					<li class="p-2 m-3"><a href="#">Contact</a></li>
+				</ul>
+			</section>
 		</nav>
 		<slot />
 	</body>
 </html>
 <style is:global>
+	@tailwind base;
+	@tailwind components;
+	@tailwind utilities;
+
 	html {
 		font-family: system-ui, sans-serif;
 		background: #13151a;
