--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -25,20 +25,12 @@ const { title } = Astro.props;
 	@tailwind components;
 	@tailwind utilities;
 
-	html {
-		font-family: system-ui, sans-serif;
-		background: white;
-		color: black;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-	}
 	body,
 	&::after,
 	&::before {
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
+		font-family: system-ui, sans-serif;
 	}
 </style>
