Updated - Dark and light mode svgs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import Layout from "../layouts/Layout.astro";
 	<main>
 		<section class="relative">
 			<Starfield />
-			<img src="/camera_02.svg" alt="camera" class="w-screen" />
+			<img src="/camera-light.svg" alt="camera" class="w-screen" />
 		</section>
-		<section class="bg-customLight dark:bg-customDark">
+		<section class="bg-customLight dark:bg-customDarker">
 			<DarkModeToggle client:visible />
 		</section>
 	</main>
